--- a/Enox.Framework/Enox.Framework.csproj
+++ b/Enox.Framework/Enox.Framework.csproj
@@ -44,8 +44,10 @@
     <Compile Include="Light.cs" />
     <Compile Include="Material.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ray.cs" />
     <Compile Include="Scene.cs" />
     <Compile Include="Solid.cs" />
+    <Compile Include="Triangle.cs" />
     <Compile Include="Vector3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
