Color and UI Update

--- a/Enox.Framework/Enox.Framework.csproj
+++ b/Enox.Framework/Enox.Framework.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Camera.cs" />
+    <Compile Include="Color.cs" />
     <Compile Include="Image.cs" />
     <Compile Include="Light.cs" />
     <Compile Include="Material.cs" />
