--- a/Enox.Framework/Enox.Framework.csproj
+++ b/Enox.Framework/Enox.Framework.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ray.cs" />
     <Compile Include="Scene.cs" />
+    <Compile Include="Serializer.cs" />
     <Compile Include="Solid.cs" />
     <Compile Include="Triangle.cs" />
     <Compile Include="Vector3.cs" />
